templates/keeweb_template.yaml
---
# Source: keeweb/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-keeweb
  labels:
    helm.sh/chart: keeweb-0.1.3
    app.kubernetes.io/name: keeweb
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.17.4-kix1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: keeweb
    app.kubernetes.io/instance: release-name
---
# Source: keeweb/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-keeweb
  labels:
    helm.sh/chart: keeweb-0.1.3
    app.kubernetes.io/name: keeweb
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.17.4-kix1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: keeweb
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: keeweb
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: release-name-keeweb
      securityContext:
        {}
      containers:
        - name: keeweb
          securityContext:
            {}
          image: "phntom/keeweb:1.17.4-kix1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            {}
---
# Source: keeweb/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-keeweb
  labels:
    helm.sh/chart: keeweb-0.1.3
    app.kubernetes.io/name: keeweb
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.17.4-kix1"
    app.kubernetes.io/managed-by: Helm
  annotations:
    acme.kubernetes.io/dns: dns_linode_v4
    acme.kubernetes.io/enable: "true"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/auth-signin: https://pwd.kix.co.il/oauth2/start?rd=$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-url: https://pwd.kix.co.il/oauth2/auth
spec:
  tls:
    - hosts:
        - "pwd.kix.co.il"
      secretName: pwd-kix-co-il-tls
  rules:
    - host: "pwd.kix.co.il"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: release-name-keeweb
                port:
                  number: 80
---
# Source: keeweb/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-keeweb-test-connection"
  labels:
    helm.sh/chart: keeweb-0.1.3
    app.kubernetes.io/name: keeweb
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.17.4-kix1"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['release-name-keeweb:80']
  restartPolicy: Never
